refactor(CreateLotto) : 로또 정렬 메서드 수정