@@ -1,9 +1,8 @@
 package lotto.domain;
 
 import camp.nextstep.edu.missionutils.Randoms;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 public class CreateLotto {
 
@@ -12,14 +11,14 @@ public class CreateLotto {
     private final static int LOTTO_NUM_MAX_RANGE = 45;
 
     public List<List<Integer>> createLotto(int lottoCounts) {
-        return IntStream.range(0, lottoCounts)
-                .mapToObj(i -> Randoms.pickUniqueNumbersInRange(LOTTO_NUM_MIN_RANGE, LOTTO_NUM_MAX_RANGE, LOTTO_LENGTH))
-                .map(numbers -> {
-                    numbers.sort(Integer::compareTo);
-                    System.out.println(numbers);
-                    return numbers;
-                })
-                .collect(Collectors.toList());
+        List<List<Integer>> lottoList = new ArrayList<>();
+        for (int i = 0; i < lottoCounts; i++) {
+            List<Integer> lottoNumbers = Randoms.pickUniqueNumbersInRange(LOTTO_NUM_MIN_RANGE, LOTTO_NUM_MAX_RANGE,
+                    LOTTO_LENGTH);
+            lottoNumbers.stream().sorted().toList();
+            lottoList.add(lottoNumbers);
+            System.out.println(lottoNumbers);
+        }
+        return lottoList;
     }
-
 }
